--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,9 @@
-.container {
-    height: 100%;
-    width: 100%;
+// .container {
+//     height: 100%;
+//     width: 100%;
+// }
+
+.flex {
+    display: flex;
+    // width: 100%;
 }
