--- a/src/components/DragAndDrop/DragAndDrop.scss
+++ b/src/components/DragAndDrop/DragAndDrop.scss
@@ -1,13 +1,24 @@
 .drag-handle {
-    // width: 100%;
-    // height: 100%;
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    cursor: move;
-  }
+  cursor: move;
+}
 
 .add-btn {
   position: absolute;
   top: 1rem;
+}
+
+.circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: blue;
+  margin: 10px;
+  position: absolute;
+  cursor: move;
+}
+
+.circle-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
