--- a/src/CanvasDrawing.scss
+++ b/src/CanvasDrawing.scss
@@ -1,15 +1,15 @@
 .canvas {
-    position: relative;
-    width: 100%;
-    height: 100%;
+    // position: relative;
+    // width: 100%;
+    width: 80vw;
     // height: 100vh;
     &__background {
     background-image: url('./assets/dnd-grid.png');
     background-size: contain;
     // background-repeat: repeat;
-    // background-size: 40%;
+    background-size: 40%;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     }
 }
 
