--- a/src/CanvasDrawing.scss
+++ b/src/CanvasDrawing.scss
@@ -14,8 +14,10 @@
 }
 
 .clear-btn {
-    position: absolute;
-    top: 16px;
+    // position: absolute;
+    position: relative;
+    // top: 16px;
+    bottom: 50px;
     left: 10px;
     z-index: 1;
 }
