--- a/src/CanvasDrawing.scss
+++ b/src/CanvasDrawing.scss
@@ -1,23 +1,23 @@
 .canvas {
     // position: relative;
     // width: 100%;
-    width: 80vw;
+    // width: 80vw;
     // height: 100vh;
     &__background {
     background-image: url('./assets/dnd-grid.png');
     background-size: contain;
     // background-repeat: repeat;
     background-size: 40%;
-    width: 100%;
+    // width: 100%;
     // height: 100%;
     }
 }
 
 .clear-btn {
-    // position: absolute;
-    position: relative;
+    position: absolute;
+    // position: relative;
     // top: 16px;
-    bottom: 50px;
+    top: 50px;
     left: 10px;
     z-index: 1;
 }
