--- a/src/CanvasDrawing.scss
+++ b/src/CanvasDrawing.scss
@@ -1,5 +1,5 @@
 .canvas {
-    // position: relative;
+    position: relative;
     // width: 100%;
     // width: 80vw;
     // height: 100vh;
@@ -16,8 +16,7 @@
 .clear-btn {
     position: absolute;
     // position: relative;
-    // top: 16px;
-    top: 50px;
-    left: 10px;
+    top: 5rem;
+    // left: 10px;
     z-index: 1;
 }
