--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -1,4 +1,9 @@
 .sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: aqua;
     width: 20vw;
+    &__title {
+    }
 }
