--- a/src/CanvasDrawing.scss
+++ b/src/CanvasDrawing.scss
@@ -2,7 +2,7 @@
     position: relative;
     // width: 100%;
     // width: 80vw;
-    // height: 100vh;
+    // height: 100%;
     &__background {
     background-image: url('./assets/dnd-grid.png');
     background-size: contain;
