--- a/src/app.scss
+++ b/src/app.scss
@@ -1,10 +1,62 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    
+}
+*:before, *:after {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+
+
 .container {
-    // height: 100%;
+    display: flex;
+    position: relative;
+    height: 100%;
 //     width: 100%;
-width: 80vw;
+    width: 80vw;
 }
 
 .flex {
     display: flex;
     // width: 100%;
+}
+.drag-handle {
+    cursor: move;
+  }
+  
+  .add-btn {
+    // position: absolute;
+    top: 3rem;
+  }
+  
+  .clearToken {
+    // position: absolute;
+    top: 1rem;
+  }
+  
+  .circle {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: blue;
+    margin: 10px;
+    position: absolute;
+    cursor: move;
+  }
+  
+  .dragAndDrop {
+    // position: relative;
+    position: absolute;
+    // display: flex;
+    justify-content: center;
+    margin-top: 50px;
+  }
+  
+.canvasContainer {
+    position: relative;
 }
