--- a/src/app.scss
+++ b/src/app.scss
@@ -5,7 +5,7 @@
     text-decoration: none;
     
 }
-*:before, *:after {
+*:before, *:after { 
     margin: 0;
     padding: 0;
     box-sizing: inherit;
@@ -17,29 +17,17 @@
     display: flex;
     position: relative;
     height: 100%;
-//     width: 100%;
     width: 80vw;
 }
 
 .flex {
     display: flex;
-    // width: 100%;
 }
 .drag-handle {
     cursor: move;
-  }
-  
-  .add-btn {
-    // position: absolute;
-    top: 3rem;
-  }
-  
-  .clearToken {
-    // position: absolute;
-    top: 1rem;
-  }
-  
-  .circle {
+}
+
+.token {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -47,16 +35,14 @@
     margin: 10px;
     position: absolute;
     cursor: move;
-  }
-  
-  .dragAndDrop {
-    // position: relative;
+}
+
+.dragAndDrop {
     position: absolute;
-    // display: flex;
     justify-content: center;
     margin-top: 50px;
-  }
-  
+}
+
 .canvasContainer {
     position: relative;
 }
