trying to fix resizing

--- a/src/CanvasDrawing.scss
+++ b/src/CanvasDrawing.scss
@@ -2,7 +2,7 @@
     position: relative;
     &__background {
     background-image: url('./assets/dnd-grid.png');
-    background-size: contain;
+    // background-size: contain;
     background-size: 40%;
     }
 }
