--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -8,8 +8,29 @@
     &__title {
     }
     &__searchBtn {
-        // display: none;
+        display: none;
     }
+}
+.list {
+    width: 80%;
+    list-style: none;
+}
+
+.modal__container {
+    position: absolute;
+    inset: 40px;
+    border: 1px solid rgb(204, 204, 204);
+    background: linear-gradient(0deg, rgba(65,63,52,1) 0%, rgba(210,204,161,1) 5%, rgba(255,255,255,1) 100%);
+    overflow: auto;
+    border-radius: 4px;
+    border: 5px solid #5c1a1b;
+    outline: none;
+    padding: 20px;
+    height: 23rem;
+    width: 45rem;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .autocomplete {
