--- a/src/app.scss
+++ b/src/app.scss
@@ -1,10 +1,14 @@
-@use './syles/global' as *;
+@use './styles/mixins';
+@use './styles/global' as *;
+@use './styles/variables' as *;
 
 .container {
     display: flex;
     position: relative;
     height: 100%;
-    width: 80vw;
+    @include mixins.tablet {
+        width: 80vw;
+    }
 }
 
 .flex {
@@ -15,13 +19,32 @@
 }
 
 .token {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: blue;
     margin: 10px;
     position: absolute;
     cursor: move;
+    & img {
+        height: 30px;
+        width: 30px;
+        border: 2px solid black;
+        border-radius: 50%;
+        @include mixins.tablet {
+            height: 75px;
+            width: 75px;
+        }
+    }
+    &__number {
+        position: absolute;
+        bottom: -1rem;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 1rem;
+    }
+}
+
+.isDragging {
+    & img {
+        border: 2px solid blue;
+    }
 }
 
 .dragAndDrop {
