--- a/src/components/AddPlayer/AddPlayer.scss
+++ b/src/components/AddPlayer/AddPlayer.scss
@@ -1,40 +1,58 @@
+@use '../../styles/mixins';
+@use '../../styles/variables' as *;
+
 .selected {
     border: 3px solid blue;
 }
 
 .modal {
     // width: 100%;
+    height: 100%;
     &__title {
         text-align: center;
     }
     &__context {
         margin: 2rem;
+        height: 100%;
         &--inputs {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             gap: 1rem;
             margin-bottom: 1rem;
+            @include mixins.tablet {
+                flex-direction: row;
+            }
         }
         &--iconSelector {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             gap: 1rem;
             margin: 0 auto;
             height: 100px;
             width: 100px;
+            @include mixins.tablet {
+                flex-direction: row;
+                justify-content: center;
+            }
         }
         &--btn {
+            margin-top: 25rem;
             width: 5rem;
             height: 2rem;
             border: none;
             box-shadow: 10px 5px 5px black;
             border-radius: 10px;
             cursor: pointer;
+            @include mixins.tablet {
+                margin-top: 0;
+            }
         }
     }
 }
 
 .btn__container {
+    gap: 1rem;
     margin-top: 2rem;
     display: flex;
     justify-content: space-around;
