--- a/src/app.scss
+++ b/src/app.scss
@@ -34,10 +34,14 @@
     }
     &__number {
         position: absolute;
-        bottom: -1rem;
+        top: 5rem;
         left: 50%;
         transform: translateX(-50%);
         font-size: 1rem;
+        background-color: rgb(99, 96, 96);
+        color: white;
+        padding: 0 0.25rem;
+        border-radius: 5px;
     }
 }
 
