--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -5,13 +5,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #F7CE65;
+    background-image: url(../../assets/dicebackground.jpg);
+    background-size: contain;
     width: 100%;
     border-bottom: 0.25rem solid #290000;
     padding-bottom: 1rem;
+    height: 100vh;
+    overflow-y: scroll;
     @include mixins.tablet {
         border-right: 0.25rem solid #290000;
         width: 20vw;
+    }
+    &__title {
+        background-color: #fff;
+        border-radius: 5px;
+        border: 1px solid rgb(204, 204, 204);
+
     }
     &__searchBtn {
         display: none;
@@ -49,6 +58,7 @@
     margin: 0;
     padding: 5px;
     list-style: none;
+    z-index: 10;
 }
 
 .hidden {
