--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -18,7 +18,7 @@
 
 button {
     text-transform: uppercase;
-    border: none;
+    border: 2px solid black;
     border-radius: 5px;
     padding: 0 10px;
     margin-top: 0.25rem;
