--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -1,6 +1,6 @@
-@use './styles/mixins';
-@use './styles/global' as *;
-@use './styles/variables' as *;
+@use '../../styles/mixins';
+@use '../../styles/global' as *;
+@use '../../styles/variables' as *;
 
 .container {
     display: flex;
