--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,6 +10,10 @@
         align-items: center;
         color: white;
         gap: 1rem;
+        &--user {
+            display: flex;
+            align-items: center;
+        }
         &--title {
             margin-left: 3rem;
         }
