--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -11,7 +11,7 @@
     border-bottom: 0.25rem solid #290000;
     padding-bottom: 1rem;
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     @include mixins.tablet {
         border-right: 0.25rem solid #290000;
         width: 20vw;
@@ -53,12 +53,20 @@
 }
 
 .autocomplete {
-    background-color: white;
+    background-color: rgb(229, 229, 229);
     position: absolute;
     margin: 0;
     padding: 5px;
     list-style: none;
     z-index: 10;
+    border: 2px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+    &__item:hover {
+        background-color: white;
+        border-radius: 5px;
+        padding: 2px;
+    }
 }
 
 .hidden {
