--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -17,7 +17,11 @@
         width: 20vw;
     }
     &__title {
-        background-color: #fff;
+        margin-top: 1rem;
+        line-height: 2.5rem;
+        padding: 0 0.25rem;
+        background-color: rgba(79, 82, 82, 0.5);
+        backdrop-filter: blur(0.5px);
         border-radius: 5px;
         border: 1px solid rgb(204, 204, 204);
 
