--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(../../assets/dicebackground.jpg);
+    background-image: url(../../assets/dicebackground2.jpg);
     background-size: contain;
     width: 100%;
     border-bottom: 0.25rem solid #290000;
@@ -20,7 +20,7 @@
         margin-top: 1rem;
         line-height: 2.5rem;
         padding: 0 0.25rem;
-        background-color: rgba(79, 82, 82, 0.5);
+        background-color: rgba(255, 255, 255);
         backdrop-filter: blur(0.5px);
         border-radius: 5px;
         border: 1px solid rgb(204, 204, 204);
