--- a/src/components/pages/LoginPage/LoginPage.scss
+++ b/src/components/pages/LoginPage/LoginPage.scss
@@ -13,21 +13,28 @@
 }
 
 .login {
-    width: 25rem;
+    width: 80%;
     margin: 10rem auto 0;
     background-color: rgba(79, 82, 82, 0.5);
     backdrop-filter: blur(3px);
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    @include mixins.tablet {
+        width: 40%;
+    }
     &__title {
         font-size: 2.5rem;
-        margin-bottom: 2rem;
+        margin-top: 1rem;
+        
         text-align: center;
     }
     &__form {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 1rem;
+        gap: 2rem;
         &--btn {
             text-align: center;
             color: white;
