--- a/src/components/pages/LoginPage/LoginPage.scss
+++ b/src/components/pages/LoginPage/LoginPage.scss
@@ -27,7 +27,7 @@
     &__title {
         font-size: 2.5rem;
         margin-top: 1rem;
-        
+
         text-align: center;
     }
     &__form {
@@ -35,6 +35,13 @@
         flex-direction: column;
         align-items: center;
         gap: 2rem;
+        &--span {
+            font-weight: bold;
+            font-size: 1.1rem;
+        }
+        &--username {
+            margin-left: 1rem;
+        }
         &--btn {
             text-align: center;
             color: white;
