--- a/src/components/pages/LoginPage/LoginPage.scss
+++ b/src/components/pages/LoginPage/LoginPage.scss
@@ -27,7 +27,7 @@
     &__title {
         font-size: 2.5rem;
         margin-top: 1rem;
-
+        color: white;
         text-align: center;
     }
     &__form {
@@ -38,6 +38,7 @@
         &--span {
             font-weight: bold;
             font-size: 1.1rem;
+            color: white;
         }
         &--username {
             margin-left: 1rem;
